# web-fullstack-workflow

skills/frontend-design-spec/: SKILL.md
skills/ignis/: SKILL.md
skills/ignis-login/: SKILL.md
skills/ignis-login/references/: igniscloud-id-public-api.md
skills/ignis-login/references/examples/ignis-login-example/: README.md  ignis.hcl
skills/ignis-login/references/examples/ignis-login-example/services/api/: Cargo.toml
skills/ignis-login/references/examples/ignis-login-example/services/api/src/: lib.rs
skills/ignis-login/references/examples/ignis-login-example/services/api/wit/: world.wit
skills/ignis/references/: cli.md  doc_index.md  ignis-hcl.md  integration.md  object-store-presign.md  system-api.md  taskplan.md
skills/ignis/references/examples/cos-and-jobs-example/: ignis.hcl
skills/ignis/references/examples/hello-fullstack/: README.md  ignis.hcl
skills/ignis/references/examples/math-proof-lab/: README.md  ignis.hcl
skills/ignis/references/examples/opencode-agent-e2e/: README.md  ignis.hcl
skills/ignis/references/examples/sqlite-example/: README.md  ignis.hcl
skills/ignis/references/ignis-sdk/: index.md
skills/opencode-web-page-generator/: SKILL.md
skills/opencode-web-page-generator/agents/: builder.md  evaluator.md  planner.md
skills/opencode-web-page-generator/references/: handoff-template.md  manager.md  product-spec-template.md  qa-report-template.md  sprint-contract-template.md
skills/prd-analysis/: SKILL.md
skills/vue-frontend-dev/: SKILL.md
skills/web-dev-workflow/: SKILL.md
(+41 files in other folders)
