[package]
name = "api"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
http-body-util = "0.1"
ignis-sdk = { path = "../../../../crates/ignis-sdk" }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
urlencoding = "2.1"
wstd = "0.6"
